--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,7 +4,8 @@
 	"leaderboardTitle": "Leaderboard",
 	"menuReferral": "Referral",
 	"referralTitle": "Invite friends. Get rewards together.",
-	"refInfo": "Bonus:",
+	"refBonus": "Bonus:",
+	"refCount": "Referrals:",
 	"refHowTo": "How it Works",
 	"refInvite": "Invite",
 	"refInviteDescr": "Friends via the referral link",
