--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -1,16 +1,17 @@
 {
   "menuBtn": "Меню",
-  "menuLeaderboard": "Лидерборд",
-	"leaderboardTitle": "Лидерборд",
-	"menuReferral": "Реферал",
-	"referralTitle": "Приглашай друзей. Получайте награды вместе.",
-	"refInfo": "Бонус:",
-	"refHowTo": "Как это работает",
-	"refInvite": "Инвайт",
-	"refInviteDescr": "Friends via the referral link",
-	"refRewards": "Get rewards",
-	"refRewardsDescr": "Receive 10% of your friends’ staking",
-	"refLink": "Your link:",
-	"refLinkDescr": "Tap 'Generate' to get your referral link",
-	"refLinkBtn": "Generate"
+  "menuLeaderboard": "Таблица лидеров",
+  "leaderboardTitle": "Таблица лидеров",
+  "menuReferral": "Реферал",
+  "referralTitle": "Приглашайте друзей. Получайте награды вместе.",
+  "refBonus": "Бонус:",
+	"refCount": "Рефералы:",
+  "refHowTo": "Как это работает",
+  "refInvite": "Пригласить",
+  "refInviteDescr": "Друзей по реферальной ссылке",
+  "refRewards": "Получайте награды",
+  "refRewardsDescr": "Получайте 10% от ставок ваших друзей",
+  "refLink": "Ваша ссылка:",
+  "refLinkDescr": "Нажмите 'Сгенерировать', чтобы получить реферальную ссылку",
+  "refLinkBtn": "Сгенерировать"
 }
