--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -2,16 +2,21 @@
   "menuBtn": "Меню",
   "menuLeaderboard": "Таблица лидеров",
   "leaderboardTitle": "Таблица лидеров",
-  "menuReferral": "Реферал",
-  "referralTitle": "Приглашайте друзей. Получайте награды вместе.",
+  "menuReferral": "Рефералы",
+  "referralTitle": "Пригласите друзей. Получайте награды вместе.",
   "refBonus": "Бонус:",
-	"refCount": "Рефералы:",
+  "refCount": "Рефералы:",
   "refHowTo": "Как это работает",
   "refInvite": "Пригласить",
   "refInviteDescr": "Друзей по реферальной ссылке",
-  "refRewards": "Получайте награды",
-  "refRewardsDescr": "Получайте 10% от ставок ваших друзей",
+  "refRewards": "Получить награды",
+  "refRewardsDescr": "Получите 10% от ставок ваших друзей",
   "refLink": "Ваша ссылка:",
-  "refLinkDescr": "Нажмите 'Сгенерировать', чтобы получить реферальную ссылку",
-  "refLinkBtn": "Сгенерировать"
+  "refLinkDescr": "Нажмите 'Сгенерировать', чтобы получить вашу реферальную ссылку",
+  "refLinkBtn": "Сгенерировать",
+	
+  "gamePauseTitle": "Осталось времени:",
+  "gamePauseMinutes": "минуты",
+  "gamePauseCalc": "Расчет...",
+  "gamePauseDescr": "Тигран устал, вернитесь, когда таймер закончится."
 }
