--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -18,5 +18,12 @@
   "gamePauseTitle": "Осталось времени:",
   "gamePauseMinutes": "минуты",
   "gamePauseCalc": "Расчет...",
-  "gamePauseDescr": "Тигран устал, вернитесь, когда таймер закончится."
+  "gamePauseDescr": "Тигран устал, вернитесь, когда таймер закончится.",
+	
+	"mainSessionCoins": "За сессию",
+	"mainEnergyHint": "Чем счастливее Тигран — тем больше вы получаете. Дайте дождю и наслаждайтесь наградами",
+
+	"modalSuccess": "Задача успешно выполнена.",
+	"modalError": "Произошла ошибка. Пожалуйста, попробуйте позже.",
+	"modalReturn": "Вернуться"
 }
