EN/RU localisation, animations

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -12,7 +12,7 @@
   "refRewards": "Получить награды",
   "refRewardsDescr": "Получите 10% от ставок ваших друзей",
   "refLink": "Ваша ссылка:",
-  "refLinkDescr": "Нажмите 'Сгенерировать', чтобы получить вашу реферальную ссылку",
+  "refLinkDescr": "Жми 'Сгенерировать', чтобы получить вашу реферальную ссылку",
   "refLinkBtn": "Сгенерировать",
 	
   "gamePauseTitle": "Осталось времени:",
@@ -44,6 +44,6 @@
   "followTGChannel": "Подписаться на TG Channel",
   "visitWebsite": "Посетить вебсайт",
   "activityCheck": "Активность не подтверждена. Вы уверены, что выполнили эту задачу?",
-  "activityClaim": "Заявить",
+  "activityClaim": "Клейм",
   "activityDone": "Готово!"
 }
