logo and coin img in footer

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -40,8 +40,8 @@
 
   "taskTimer": "секунды",
   "followTwitter": "Подписаться на Twitter",
-  "followTGChat": "Подписаться на TG Chat",
-  "followTGChannel": "Подписаться на TG Channel",
+  "followTGChat": "Подписаться на ТГ Чат",
+  "followTGChannel": "Подписаться на ТГ Канал",
   "visitWebsite": "Посетить вебсайт",
   "activityCheck": "Активность не подтверждена. Вы уверены, что выполнили эту задачу?",
   "activityClaim": "Клейм",
