--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -36,7 +36,7 @@
   "tasksTabDaily": "Ежедневные",
   "tasksTabPartners": "Партнеры",
   "walletTaskTitle": "Текущий кошелек",
-  "walletTaskHint": "*можно делать раз в 3 дня",
+  "walletTaskHint": "*доступно раз в 3 дня",
 
   "taskTimer": "секунды",
   "followTwitter": "Подписаться на Twitter",
