--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -18,10 +18,10 @@
 	"gamePauseTitle": "Time remaining:",
 	"gamePauseMinutes": "minutes",
 	"gamePauseCalc": "Calculating...",
-	"gamePauseDescr": "Tigran is tired, come back when timer is over.",
+	"gamePauseDescr": "Tiger is tired, come back when timer is over.",
 
 	"mainSessionCoins": "For Session",
-	"mainEnergyHint": "The happier the Tigran — the more you get  Make it rain and enjoy rewards",
+	"mainEnergyHint": "The happier the Tiger — the more you get  Make it rain and enjoy rewards",
 
 	"modalSuccess": "Task completed successfully.",
 	"modalAttention": "Submit your wallet first.",
