--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -18,10 +18,10 @@
   "gamePauseTitle": "Осталось времени:",
   "gamePauseMinutes": "минуты",
   "gamePauseCalc": "Расчет...",
-  "gamePauseDescr": "Тигран устал, вернитесь, когда таймер закончится.",
+  "gamePauseDescr": "Тигр устал, вернитесь, когда таймер закончится.",
 
   "mainSessionCoins": "За сессию",
-  "mainEnergyHint": "Чем счастливее Тигран — тем больше вы получаете. Дайте дождю и наслаждайтесь наградами",
+  "mainEnergyHint": "Чем счастливее Тигр — тем больше вы получаете. Дайте дождю и наслаждайтесь наградами",
 
   "modalSuccess": "Задача успешно выполнена.",
   "modalAttention": "Сначала отправьте ваш кошелек.",
