copy test, margin top 0 for all modals

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -14,6 +14,7 @@
   "refLink": "Ваша ссылка:",
   "refLinkDescr": "Жми 'Сгенерировать', чтобы получить вашу реферальную ссылку",
   "refLinkBtn": "Сгенерировать",
+  "refLinkCopy": "Cкопировано!",
 	
   "gamePauseTitle": "Осталось времени:",
   "gamePauseMinutes": "мин",
