--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -14,6 +14,7 @@
 	"refLink": "Your link:",
 	"refLinkDescr": "Tap 'Generate' to get your referral link",
 	"refLinkBtn": "Generate",
+	"refLinkCopy": "Copied!",
 	
 	"gamePauseTitle": "Time remaining:",
 	"gamePauseMinutes": "min",
