--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -1,43 +1,43 @@
 {
   "menuBtn": "Меню",
-  "menuLeaderboard": "Таблица лидеров",
-  "leaderboardTitle": "Таблица лидеров",
-  "menuReferral": "Рефералы",
-  "referralTitle": "Пригласите друзей. Получайте награды вместе.",
-  "refBonus": "Бонус:",
-  "refCount": "Рефералы:",
-  "refHowTo": "Как это работает",
-  "refInvite": "Пригласить",
-  "refInviteDescr": "Друзей по реферальной ссылке",
-  "refRewards": "Получить награды",
+  "menuLeaderboard": "Самые взорванные",
+  "leaderboardTitle": "Самые взорванные",
+  "menuReferral": "Кенты",
+  "referralTitle": "Подтягивай кентов и получай откат от тигра",
+  "refBonus": "Откат:",
+  "refCount": "Кенты:",
+  "refHowTo": "Че за темка?",
+  "refInvite": "Подтянуть",
+  "refInviteDescr": "кентов по реферальной ссылке",
+  "refRewards": "Получить откат",
   "refRewardsDescr": "Получите 10% от ставок ваших друзей",
   "refLink": "Ваша ссылка:",
-  "refLinkDescr": "Жми 'Сгенерировать', чтобы получить вашу реферальную ссылку",
-  "refLinkBtn": "Сгенерировать",
-  "refLinkCopy": "Cкопировано!",
+  "refLinkDescr": "Жми 'Насуетить ссылочку', чтобы получить вашу реферальную ссылку",
+  "refLinkBtn": "Насуетить ссылочку",
+  "refLinkCopy": "Скопировано!",
 	
   "gamePauseTitle": "Осталось времени:",
   "gamePauseMinutes": "мин",
   "gamePauseCalc": "Расчет...",
   "gamePauseDescr": "Тигр устал, вернитесь, когда таймер закончится.",
 
-  "mainSessionCoins": "За сессию",
-  "mainEnergyHint": "Чем счастливее Тигр — тем больше вы получаете. Дайте дождю и наслаждайтесь наградами",
+  "mainSessionCoins": "За раз поднял",
+  "mainEnergyHint": "Чем взорваннее тигр, тем взорваннее ты. Так что не халявь, братик",
 
-  "modalSuccess": "Задача успешно выполнена.",
-  "modalAttention": "Сначала подключите ваш кошелек.",
-  "modalError": "Произошла ошибка. Пожалуйста, попробуйте позже.",
-  "modalWalletSubmitSucc": "Кошелек подключен успешно.",
-	"modalWalletSubmitBusy": "Этот кошелек уже используется.",
-  "modalWalletChangeSucc": "Кошелек успешно изменен.",
-  "modalWalletChangeBusy": "Этот кошелек уже используется.",
+  "modalSuccess": "Темка успешно выполнена.",
+  "modalAttention": "Сперва подключи кош!",
+  "modalError": "Несостыковочка вышла, давай заново",
+  "modalWalletSubmitSucc": "Кош поменяли, суети дальше",
+	"modalWalletSubmitBusy": "Этот кош уже забили",
+  "modalWalletChangeSucc": "Кош успешно заменили",
+  "modalWalletChangeBusy": "Этот кош уже забили",
   "modalReturn": "Вернуться",
 
-  "tasksTabTitle": "Задачи",
-  "tasksTitle": "Выполняйте задачи и получайте награды!",
-  "tasksTabSocial": "Социальные",
-  "tasksTabDaily": "Ежедневные",
-  "tasksTabPartners": "Партнеры",
+  "tasksTabTitle": "Темки",
+  "tasksTitle": "Темки на ход ноги, выполняй и на чаху всегда хватит",
+  "tasksTabSocial": "Суета",
+  "tasksTabDaily": "Движ",
+  "tasksTabPartners": "Темки братков",
   "walletTaskTitle": "Текущий кошелек",
   "walletTaskHint": "*доступно раз в 3 дня",
 
@@ -45,8 +45,14 @@
   "followTwitter": "Подписаться на Twitter",
   "followTGChat": "Подписаться на ТГ Чат",
   "followTGChannel": "Подписаться на ТГ Канал",
-  "visitWebsite": "Посетить вебсайт",
-  "activityCheck": "Активность не подтверждена. Вы уверены, что выполнили эту задачу?",
+  "visitWebsite": "Задонатить ламбу админам",
+  "activityCheck": "Халява не прокатит, бро, нормально делай ",
   "activityClaim": "Клейм",
-  "activityDone": "Готово!"
+  "activityDone": "Готово!",
+
+  "error404" : "Несостыковочка вышла",
+	"repairUpdate" : "Пару моментиков закрыть осталось, подожди",
+	"comingSoon" : "Скоро все будет, Бро",
+
+  "QRcode": "Все по красоте, бро, <br /> прям с мобилки"
 }
