--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -19,7 +19,7 @@
   "gamePauseTitle": "Осталось времени:",
   "gamePauseMinutes": "мин",
   "gamePauseCalc": "Расчет...",
-  "gamePauseDescr": "Тигр устал, вернитесь, когда таймер закончится.",
+  "gamePauseDescr": "Тигр устал, вернется когда докурит чаху",
 
   "mainSessionCoins": "За раз поднял",
   "mainEnergyHint": "Чем взорваннее тигр, тем взорваннее ты. Так что не халявь, братик",
@@ -37,7 +37,7 @@
   "tasksTitle": "Темки на ход ноги, выполняй и на чаху всегда хватит",
   "tasksTabSocial": "Суета",
   "tasksTabDaily": "Движ",
-  "tasksTabPartners": "Темки братков",
+  "tasksTabPartners": "Темки близких",
   "walletTaskTitle": "Текущий кошелек",
   "walletTaskHint": "*доступно раз в 3 дня",
 
