task btns BG, coins for rewards

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -36,8 +36,8 @@
   "tasksTabTitle": "Темки",
   "tasksTitle": "Темки на ход ноги, выполняй и на чаху всегда хватит",
   "tasksTabSocial": "Суета",
-  "tasksTabDaily": "Движ",
-  "tasksTabPartners": "Темки близких",
+  "tasksTabDaily": "Движ", 
+  "tasksTabPartners": "Темки",
   "walletTaskTitle": "Текущий кошелек",
   "walletTaskHint": "*доступно раз в 3 дня",
 
